# libUDPStreamer

./: CMakeLists.txt  Client.cpp  Library.cpp  Library.h  README.md  Server.cpp  UDPStreamerJNI.cpp  UDPStreamerJNI.h  UDPStreamerJNI.java  buildJNI.sh  udp_streaming_lib.h
java/: in_derros_jni_UDPStreamer.h
java/in/derros/jni/: UDPStreamer.java
releases/x86_64_release/: CMakeCache.txt  Makefile  cmake_install.cmake
